adding support for 2-column kernels and FFT example in notebook

--- a/develop-new-kernel-vwr2a.ipynb
+++ b/develop-new-kernel-vwr2a.ipynb
@@ -55,8 +55,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This kernel uses 44 instruction words starting at IMEM address 0.\n",
-      "It uses column(s): 0.\n",
+      "This kernel uses 39 instruction words starting at IMEM address 0.\n",
+      "It uses column(s): both.\n",
       "The SRF is located in SPM bank 0.\n"
      ]
     }
@@ -64,7 +64,7 @@
    "source": [
     "# Load an existing kernel into memory\n",
     "kmem_pos = 1\n",
-    "kmem_word = 0x802b\n",
+    "kmem_word = 0x18026\n",
     "\n",
     "kmem = KER_CONF()\n",
     "kmem.set_word(kmem_word, kmem_pos)\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "fce7b90d",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
    "source": [
     "# Load an existing imem word and decode it\n",
     "imem_pos = 1\n",
-    "imem_word = 0x1c00\n",
+    "imem_word = 0xd9c00\n",
     "\n",
     "lcu_imem = LCU_IMEM()\n",
     "lcu_imem.set_word(imem_word, imem_pos)\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "41778210",
    "metadata": {},
    "outputs": [
@@ -261,8 +261,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0\n",
       "Not writing to VWRs\n",
-      "Reading from SRF index 6\n",
+      "Reading from SRF index 1\n",
       "Performing ALU operation NOP between operands R0 and R0\n",
       "No MXCU registers are being written\n"
      ]
@@ -271,7 +272,7 @@
    "source": [
     "# Load an existing imem word and decode it\n",
     "imem_pos = 1\n",
-    "imem_word = 0x180\n",
+    "imem_word = 0x40\n",
     "\n",
     "mxcu_imem = MXCU_IMEM()\n",
     "mxcu_imem.set_word(imem_word, imem_pos)\n",
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "dcff511a",
    "metadata": {},
    "outputs": [
@@ -511,7 +512,7 @@
        "4  0xb8f80    0x539  0x4ce9000  0x0  0x0  0x0  0x0     0x0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "6ff1ed6c",
    "metadata": {},
    "outputs": [],
@@ -537,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "a2760d60",
    "metadata": {},
    "outputs": [
@@ -547,20 +548,23 @@
      "text": [
       "Immediate value: 0\n",
       "LCU is in loop control mode\n",
-      "No LCU ALU Operation is performed\n",
+      "Exiting out of kernel\n",
       "No LCU registers are being written\n"
      ]
     }
    ],
    "source": [
     "# Make sure that the last kernel value is the exit instruction\n",
-    "n_instr, imem_add, _, _ = imem.kmem.get_params(0)\n",
-    "lcu_instr = imem.lcu_imem.get_instruction_info(n_instr + imem_add)"
+    "n_instr, imem_add, n_col, _ = imem.kmem.get_params(1)\n",
+    "if n_col == 3:\n",
+    "    lcu_instr = imem.lcu_imem_col0.get_instruction_info(2*n_instr + imem_add)\n",
+    "else:\n",
+    "    lcu_instr = imem.lcu_imem_col0.get_instruction_info(n_instr + imem_add)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "4b5a7a10",
    "metadata": {},
    "outputs": [
@@ -599,7 +603,208 @@
    ],
    "source": [
     "# Print what's going on at a given imem position\n",
-    "imem.get_pos_summary(imem_pos=0)"
+    "imem.get_pos_summary(imem_pos=0, col_index=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8869414c",
+   "metadata": {},
+   "source": [
+    "### Load a 2-column kernel\n",
+    "Kernels can use either one column of the CGRA, or both in parallel. The FFT example uses both."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6fee52e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The instruction memory has 512 entries.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LCU</th>\n",
+       "      <th>LSU</th>\n",
+       "      <th>MXCU</th>\n",
+       "      <th>RC0</th>\n",
+       "      <th>RC1</th>\n",
+       "      <th>RC2</th>\n",
+       "      <th>RC3</th>\n",
+       "      <th>KMEM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x5d49e</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0x9c540</td>\n",
+       "      <td>0x4c80</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x18026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0x98f00</td>\n",
+       "      <td>0x453a</td>\n",
+       "      <td>0x40</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x393b0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0xf8fc8</td>\n",
+       "      <td>0x412c</td>\n",
+       "      <td>0x353b180</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0x18f80</td>\n",
+       "      <td>0x4c9b</td>\n",
+       "      <td>0x31db000</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       LCU      LSU       MXCU  RC0  RC1  RC2  RC3     KMEM\n",
+       "0      0x0  0x5d49e        0x0  0x0  0x0  0x0  0x0      0x0\n",
+       "1  0x9c540   0x4c80        0x0  0x0  0x0  0x0  0x0  0x18026\n",
+       "2  0x98f00   0x453a       0x40  0x0  0x0  0x0  0x0  0x393b0\n",
+       "3  0xf8fc8   0x412c  0x353b180  0x0  0x0  0x0  0x0      0x0\n",
+       "4  0x18f80   0x4c9b  0x31db000  0x0  0x0  0x0  0x0      0x0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kernel_path = \"kernels/fft/\"\n",
+    "df = pd.read_csv(kernel_path + \"instructions.csv\")\n",
+    "print(\"The instruction memory has {0} entries.\".format(len(df)))\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1a0664fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This kernel uses 39 instruction words starting at IMEM address 0.\n",
+      "It uses column(s): both.\n",
+      "The SRF is located in SPM bank 0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set an IMEM object and load kernel 1\n",
+    "imem = IMEM(df)\n",
+    "imem.load_kernel(1)\n",
+    "imem.kmem.get_kernel_info(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "850abf88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****RC0****\n",
+      "No ALU operation\n",
+      "No RC registers are being written\n",
+      "****RC1****\n",
+      "No ALU operation\n",
+      "No RC registers are being written\n",
+      "****RC2****\n",
+      "No ALU operation\n",
+      "No RC registers are being written\n",
+      "****RC3****\n",
+      "No ALU operation\n",
+      "No RC registers are being written\n",
+      "****LSU****\n",
+      "No loading, storing, or shuffling taking place\n",
+      "Performing ALU operation LAND between operands ZERO and ZERO\n",
+      "No LSU registers are being written\n",
+      "****LCU****\n",
+      "Immediate value: 0\n",
+      "LCU is in loop control mode\n",
+      "No LCU ALU Operation is performed\n",
+      "No LCU registers are being written\n",
+      "****MXCU****\n",
+      "Not writing to VWRs\n",
+      "Reading from SRF index 0\n",
+      "Performing ALU operation NOP between operands R0 and R0\n",
+      "No MXCU registers are being written\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Note that now, the second column is populated with non-default instructions\n",
+    "imem.get_pos_summary(imem_pos=0, col_index=1)"
    ]
   },
   {
@@ -613,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "afda96ea",
    "metadata": {},
    "outputs": [
@@ -643,18 +848,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "ec16ba0b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write LCU instruction\n",
-    "imem.lcu_imem.set_params(alu_op=LCU_ALU_OPS.EXIT, pos=0)"
+    "imem.lcu_imem_col0.set_params(alu_op=LCU_ALU_OPS.EXIT, pos=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "2fd36ec2",
    "metadata": {},
    "outputs": [
@@ -758,7 +963,7 @@
        "4     0x0  0x4c80  0x0  0x0  0x0  0x0  0x0     0x0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "3334c406",
    "metadata": {},
    "outputs": [],
@@ -795,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "id": "2586b29e",
    "metadata": {},
    "outputs": [],
@@ -805,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "id": "eb7efcf3",
    "metadata": {},
    "outputs": [
@@ -834,13 +1039,13 @@
     "vwr_shuf_sel=LSU_OP_MODE.LOAD\n",
     "\n",
     "print(\"***LSU***\")\n",
-    "imem.lsu_imem.set_params(rf_wsel, rf_we, alu_op, muxb_sel, muxa_sel, vwr_shuf_op, vwr_shuf_sel, pos)\n",
-    "imem.lsu_imem.get_instruction_info(pos)"
+    "imem.lsu_imem_col0.set_params(rf_wsel, rf_we, alu_op, muxb_sel, muxa_sel, vwr_shuf_op, vwr_shuf_sel, pos)\n",
+    "imem.lsu_imem_col0.get_instruction_info(pos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "id": "47a62bc4",
    "metadata": {},
    "outputs": [
@@ -869,13 +1074,13 @@
     "vwr_shuf_sel=LSU_OP_MODE.LOAD\n",
     "\n",
     "print(\"***LSU***\")\n",
-    "imem.lsu_imem.set_params(rf_wsel, rf_we, alu_op, muxb_sel, muxa_sel, vwr_shuf_op, vwr_shuf_sel, pos)\n",
-    "imem.lsu_imem.get_instruction_info(pos)\n"
+    "imem.lsu_imem_col0.set_params(rf_wsel, rf_we, alu_op, muxb_sel, muxa_sel, vwr_shuf_op, vwr_shuf_sel, pos)\n",
+    "imem.lsu_imem_col0.get_instruction_info(pos)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "id": "e1402929",
    "metadata": {},
    "outputs": [
@@ -909,8 +1114,8 @@
     "vwr_shuf_sel=LSU_OP_MODE.LOAD\n",
     "\n",
     "print(\"***LSU***\")\n",
-    "imem.lsu_imem.set_params(rf_wsel=rf_wsel, rf_we=rf_we, alu_op=alu_op, muxa_sel=muxa_sel, muxb_sel=muxb_sel, vwr_shuf_op=vwr_shuf_op, vwr_shuf_sel=vwr_shuf_sel, pos=pos)\n",
-    "imem.lsu_imem.get_instruction_info(pos)\n",
+    "imem.lsu_imem_col0.set_params(rf_wsel=rf_wsel, rf_we=rf_we, alu_op=alu_op, muxa_sel=muxa_sel, muxb_sel=muxb_sel, vwr_shuf_op=vwr_shuf_op, vwr_shuf_sel=vwr_shuf_sel, pos=pos)\n",
+    "imem.lsu_imem_col0.get_instruction_info(pos)\n",
     "\n",
     "# MXCU: Set R0 to 0 (first index of VWR slice) to begin adding respective vector indices.\n",
     "rf_wsel = 0 \n",
@@ -920,13 +1125,13 @@
     "muxa_sel = MXCU_MUXA_SEL.ZERO\n",
     "\n",
     "print(\"***MXCU***\")\n",
-    "imem.mxcu_imem.set_params(rf_wsel=rf_wsel, rf_we=rf_we, alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
-    "imem.mxcu_imem.get_instruction_info(pos)"
+    "imem.mxcu_imem_col0.set_params(rf_wsel=rf_wsel, rf_we=rf_we, alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
+    "imem.mxcu_imem_col0.get_instruction_info(pos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "id": "ee7ebed1",
    "metadata": {},
    "outputs": [
@@ -968,23 +1173,23 @@
     "muxb_sel = RC_MUXB_SEL.VWR_B\n",
     "\n",
     "print(\"***RC0***\")\n",
-    "imem.rc0_imem.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
-    "imem.rc0_imem.get_instruction_info(pos)\n",
+    "imem.rc0_imem_col0.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
+    "imem.rc0_imem_col0.get_instruction_info(pos)\n",
     "\n",
     "# R1: Add VWR A and VWR B\n",
     "print(\"***RC1***\")\n",
-    "imem.rc1_imem.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
-    "imem.rc1_imem.get_instruction_info(pos)\n",
+    "imem.rc1_imem_col0.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
+    "imem.rc1_imem_col0.get_instruction_info(pos)\n",
     "\n",
     "# R2: Add VWR A and VWR B\n",
     "print(\"***RC2***\")\n",
-    "imem.rc2_imem.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
-    "imem.rc2_imem.get_instruction_info(pos)\n",
+    "imem.rc2_imem_col0.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
+    "imem.rc2_imem_col0.get_instruction_info(pos)\n",
     "\n",
     "# R3: Add VWR A and VWR B\n",
     "print(\"***RC3***\")\n",
-    "imem.rc3_imem.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
-    "imem.rc3_imem.get_instruction_info(pos)\n",
+    "imem.rc3_imem_col0.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
+    "imem.rc3_imem_col0.get_instruction_info(pos)\n",
     "\n",
     "# MXCU: Enable writing result to VWR C, increment R0 (index of the VWR slice)\n",
     "vwr_row_we = [1, 1, 1, 1]\n",
@@ -999,13 +1204,13 @@
     "muxa_sel = MXCU_MUXA_SEL.ONE\n",
     "\n",
     "print(\"***MXCU***\")\n",
-    "imem.mxcu_imem.set_params(vwr_row_we, vwr_sel, srf_sel, alu_srf_write, srf_we, rf_wsel, rf_we, alu_op, muxb_sel, muxa_sel, pos)\n",
-    "imem.mxcu_imem.get_instruction_info(pos)"
+    "imem.mxcu_imem_col0.set_params(vwr_row_we, vwr_sel, srf_sel, alu_srf_write, srf_we, rf_wsel, rf_we, alu_op, muxb_sel, muxa_sel, pos)\n",
+    "imem.mxcu_imem_col0.get_instruction_info(pos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "id": "0f92c80a",
    "metadata": {},
    "outputs": [],
@@ -1018,16 +1223,16 @@
     "    muxa_sel =  RC_MUXA_SEL.VWR_A\n",
     "    muxb_sel = RC_MUXB_SEL.VWR_B\n",
     "\n",
-    "    imem.rc0_imem.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
+    "    imem.rc0_imem_col0.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
     "\n",
     "    # R1: Add VWR A and VWR B\n",
-    "    imem.rc1_imem.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
+    "    imem.rc1_imem_col0.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
     "\n",
     "    # R2: Add VWR A and VWR B\n",
-    "    imem.rc2_imem.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
+    "    imem.rc2_imem_col0.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
     "\n",
     "    # R3: Add VWR A and VWR B\n",
-    "    imem.rc3_imem.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
+    "    imem.rc3_imem_col0.set_params(alu_op=alu_op, muxb_sel=muxb_sel, muxa_sel=muxa_sel, pos=pos)\n",
     "    # MXCU: Enable writing result to VWR C, increment R0 (index of the VWR slice) and save it in SRF position 1\n",
     "    vwr_row_we = [1, 1, 1, 1]\n",
     "    vwr_sel = MXCU_VWR_SEL.VWR_C\n",
@@ -1040,12 +1245,12 @@
     "    muxb_sel = MXCU_MUXB_SEL.R0\n",
     "    muxa_sel = MXCU_MUXA_SEL.ONE\n",
     "\n",
-    "    imem.mxcu_imem.set_params(vwr_row_we, vwr_sel, srf_sel, alu_srf_write, srf_we, rf_wsel, rf_we, alu_op, muxb_sel, muxa_sel, pos)"
+    "    imem.mxcu_imem_col0.set_params(vwr_row_we, vwr_sel, srf_sel, alu_srf_write, srf_we, rf_wsel, rf_we, alu_op, muxb_sel, muxa_sel, pos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 48,
    "id": "d89b3e27",
    "metadata": {},
    "outputs": [
@@ -1074,13 +1279,13 @@
     "vwr_shuf_sel=LSU_OP_MODE.STORE\n",
     "\n",
     "print(\"***LSU***\")\n",
-    "imem.lsu_imem.set_params(rf_wsel, rf_we, alu_op, muxb_sel, muxa_sel, vwr_shuf_op, vwr_shuf_sel, pos)\n",
-    "imem.lsu_imem.get_instruction_info(pos)"
+    "imem.lsu_imem_col0.set_params(rf_wsel, rf_we, alu_op, muxb_sel, muxa_sel, vwr_shuf_op, vwr_shuf_sel, pos)\n",
+    "imem.lsu_imem_col0.get_instruction_info(pos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "id": "32611357",
    "metadata": {},
    "outputs": [
@@ -1102,13 +1307,13 @@
     "\n",
     "# LCU: Exit\n",
     "print(\"***LCU***\")\n",
-    "imem.lcu_imem.set_params(alu_op=LCU_ALU_OPS.EXIT, pos=pos)\n",
-    "imem.lcu_imem.get_instruction_info(pos)"
+    "imem.lcu_imem_col0.set_params(alu_op=LCU_ALU_OPS.EXIT, pos=pos)\n",
+    "imem.lcu_imem_col0.get_instruction_info(pos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 50,
    "id": "e98a876a",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "id": "d7c6b3ba",
    "metadata": {},
    "outputs": [
@@ -1624,7 +1829,7 @@
        "36  0x1c00   0x4c80        0x0    0x0    0x0    0x0    0x0     NaN"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1637,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 52,
    "id": "82e71ce3",
    "metadata": {},
    "outputs": [],
