adding all previously mapped kernels and including documentation and example code for each one

--- a/develop-new-kernel-vwr2a.ipynb
+++ b/develop-new-kernel-vwr2a.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "fce7b90d",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "41778210",
    "metadata": {},
    "outputs": [
@@ -261,9 +261,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "Not writing to VWRs\n",
-      "Reading from SRF index 1\n",
+      "Writing to VWR rows [0] of VWR_A\n",
+      "Reading from SRF index 0\n",
       "Performing ALU operation NOP between operands R0 and R0\n",
       "No MXCU registers are being written\n"
      ]
@@ -272,7 +271,7 @@
    "source": [
     "# Load an existing imem word and decode it\n",
     "imem_pos = 1\n",
-    "imem_word = 0x40\n",
+    "imem_word = 0x1\n",
     "\n",
     "mxcu_imem = MXCU_IMEM()\n",
     "mxcu_imem.set_word(imem_word, imem_pos)\n",
@@ -281,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "8d25ddda",
    "metadata": {},
    "outputs": [
@@ -289,7 +288,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing to VWR rows [1 2 3] of VWR_B\n",
+      "Writing to VWR rows [0] of VWR_B\n",
       "Writing from MXCU ALU to SRF register 3\n",
       "Performing ALU operation SADD between operands TWO and R0\n",
       "No MXCU registers are being written\n"
@@ -301,7 +300,7 @@
     "imem_pos = 2\n",
     "\n",
     "# Define instruction parameters\n",
-    "vwr_row_we = [1, 1, 1, 0]\n",
+    "vwr_row_we = [0, 0, 0, 1]\n",
     "vwr_sel = MXCU_VWR_SEL.VWR_B.value\n",
     "srf_sel = 3\n",
     "alu_srf_write = ALU_SRF_WRITE.MXCU\n",
