--- a/develop-new-kernel-vwr2a.ipynb
+++ b/develop-new-kernel-vwr2a.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "5e0a478f",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "81aeaf93",
    "metadata": {},
    "outputs": [
@@ -351,19 +351,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "b9a334d0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'RC_ALU_OPS' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m rf_we \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m \n\u001b[1;32m      7\u001b[0m muxf_sel \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[0;32m----> 8\u001b[0m alu_op \u001b[38;5;241m=\u001b[39m  \u001b[43mRC_ALU_OPS\u001b[49m\u001b[38;5;241m.\u001b[39mSADD\n\u001b[1;32m      9\u001b[0m op_mode \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;66;03m#Always keep this to zero; 16-bit mode is not supported yet\u001b[39;00m\n\u001b[1;32m     10\u001b[0m muxb_sel \u001b[38;5;241m=\u001b[39m  RC_MUXA_SEL\u001b[38;5;241m.\u001b[39mZERO\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'RC_ALU_OPS' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output VWR_B if sign flag of RCT == 1, else output VWR_A\n",
+      "Writing ALU result to RC register 1\n"
      ]
     }
    ],
@@ -1883,7 +1880,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
